<package>
  <name>graspit_ros_planning_msgs</name>
  <version>1.0.0</version>
  <description>

    Contains messages for the graspit_ros_planning package and interface. See that package for more details.

  </description>
  <author>Peter Brook</author>
  <maintainer email="cartejac@oregonstate.edu">Jackson Carter</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend> sensor_msgs</build_depend>
  <build_depend> geometry_msgs</build_depend>
  <build_depend> manipulation_msgs</build_depend>
  <build_depend> message_generation</build_depend>
  <run_depend> sensor_msgs</run_depend>
  <run_depend> geometry_msgs</run_depend>
  <run_depend> manipulation_msgs</run_depend>
  <run_depend> message_runtime</run_depend>
</package>


